Switched to Untappd API, added environment file, updated brewery list with new data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,13 +12,13 @@
     <div class="container">
         <fieldset>
             <form action="/" method="post">
-                <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
+                <input name="query" type="text" class="ghost-input" placeholder="Search for a Brewery" required>
                 <input type="submit" class="ghost-button" value="Get Brewery">
             </form>
             <% if(breweries !== null){ %>
                 <div class="brewery-search-results">
                     <% breweries.forEach(function(brewery){ %>
-                        <%- include('components/brewery-block', {brewery: brewery}); %>
+                        <%- include('components/brewery-block', {brewery: brewery.brewery}); %>
                     <% }); %>
                 </div>
             <% } %>
