--- a/views/components/brewery-block.ejs
+++ b/views/components/brewery-block.ejs
@@ -1,26 +1,11 @@
 <div class="brewery-block">
-    <h3 class="brewery-name">
-        <%= brewery.name %>
-    </h3>
-    <% if(brewery.type) { %>
-        <div class="brewery-type">
-            <%= brewery.type %>
-        </div>
-    <% } %>
-    <div class="brewery-address">
-        <% if(brewery.street) { %>
-            <%= brewery.street %><br>
-        <% } %>
-        <%= brewery.city %>, <%= brewery.state %> <%= brewery.postal_code %>
+    <div class="brewery-img">
+        <img src="<%= brewery.brewery_label %>" alt="">
     </div>
-    <% if(brewery.phone) { %>
-        <div class="brewery-phone">
-            <%= brewery.phone %>
-        </div>
-    <% } %>
-    <% if(brewery.website_url) { %>
-        <div class="brewery-website">
-            <a href="<%= brewery.website_url %>">Website</a>
-        </div>
-    <% } %>
+    <h3 class="brewery-name">
+        <%= brewery.brewery_name %>
+    </h3>
+    <div class="brewery-address">
+        <%= brewery.location.brewery_city %>, <%= brewery.location.brewery_state %>
+    </div>
 </div>
