Added alt tag for brewery logo images

--- a/views/components/brewery-block.ejs
+++ b/views/components/brewery-block.ejs
@@ -1,6 +1,6 @@
 <div class="brewery-block">
     <div class="brewery-img">
-        <img src="<%= brewery.brewery_label %>" alt="">
+        <img src="<%= brewery.brewery_label %>" alt="<%= brewery.brewery_name %> Logo">
     </div>
     <h3 class="brewery-name">
         <%= brewery.brewery_name %>
