--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,28 +5,39 @@
     <meta charset="utf-8">
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300'  type='text/css'>
 </head>
 
-<body>
-    <div class="container">
-        <fieldset>
-            <form action="/" method="post">
-                <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
-                <input type="submit" class="ghost-button" value="Get Brewery">
-            </form>
-            <% if(breweries !== null){ %>
-                <div class="brewery-search-results">
-                    <% breweries.forEach(function(brewery){ %>
-                        <%- include('components/brewery-block', {brewery: brewery}); %>
-                    <% }); %>
-                </div>
-            <% } %>
-            <% if(error !== null){ %>
-                <p><%= error %></p>
-            <% } %>
-        </fieldset>
-    </div>
+<body></body>
+    <div class="grid-container">
+            <div class="grid-item item1">
+                    <div class="container">
+                            <fieldset>
+                                <form action="/" method="post">
+                                    <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
+                                    <input type="submit" class="ghost-button" value="Get Brewery">
+                                </form>
+                                <% if(breweries !== null){ %>
+                                    <div class="brewery-search-results">
+                                        <% breweries.forEach(function(brewery){ %>
+                                            <%- include('components/brewery-block', {brewery: brewery}); %>
+                                        <% }); %>
+                                    </div>
+                                <% } %>
+                                <% if(error !== null){ %>
+                                    <p><%= error %></p>
+                                <% } %>
+                            </fieldset>
+                        </div>
+            </div>
+            <div class="grid-item item2"></div>
+          </div>
+
+
+
+
 </body>
 
 </html>
+
+
