--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300'  type='text/css'>
 </head>
 
-<body></body>
+<body>
+    <%- include('components/header'); %>
     <div class="grid-container">
             <div class="grid-item item1">
                     <div class="container">
