Update Map Location to specific brewery

--- a/views/components/brewery-block.ejs
+++ b/views/components/brewery-block.ejs
@@ -23,6 +23,7 @@
             <a href="<%= brewery.website_url %>">Website</a>
         </div>
     <% } %>
+
     <% if(brewery.longitude, brewery.latitude) { %>
         <div class="brewery-map">
                 <iframe
@@ -30,7 +31,7 @@
                 width="150px"
                 height="150px"
                 frameborder="0" style="border:0"
-                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCnPeSCSirjqSR0T5aX2dpKFhN9I7Xefjs&q=37.4218,-122.0840" allowfullscreen>
+                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCnPeSCSirjqSR0T5aX2dpKFhN9I7Xefjs&q=<%= brewery.latitude %>,<%= brewery.longitude %>" zoom="70" allowfullscreen>
                 </iframe>
         </div>
     <% } %>
